--- a/rbac.yaml
+++ b/rbac.yaml
@@ -15,10 +15,10 @@ metadata:
   name: expense-trainee
   namespace: expense 
 roleRef:
-  apiGroups: rbac.authorization.k8s.io 
+  apiGroup: rbac.authorization.k8s.io 
   kind: Role
   name: expense-trainee
 subjects:
-- apiGroups: rbac.authorization.k8s.io 
+- apiGroup: rbac.authorization.k8s.io 
   kind: User
   name: suresh
