--- a/rbac.yaml
+++ b/rbac.yaml
@@ -22,3 +22,29 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io 
   kind: User
   name: suresh
+
+---
+apiVersion: rbac.authorization.k8s.io/v1 
+kind: Role 
+metadata:
+  namespace: expense 
+  name: expense-admin
+rules:
+- apiGroups: [""] # "" indicates the core API group 
+  resources: ["*"]
+  verbs: ["*"]
+---
+# Role binding 
+apiVersion: rbac.authorization.k8s.io/v1 
+kind: RoleBinding 
+metadata:
+  name: expense-admin
+  namespace: expense 
+roleRef:
+  apiGroup: rbac.authorization.k8s.io 
+  kind: Role
+  name: expense-admin 
+subjects:
+- apiGroup: rbac.authorization.k8s.io 
+  kind: User
+  name: Ramesh 
