--- a/rbac.yaml
+++ b/rbac.yaml
@@ -48,3 +48,29 @@ subjects:
 - apiGroup: rbac.authorization.k8s.io 
   kind: User
   name: Ramesh 
+
+---
+# cluster role and cluster rolebinding
+
+apiVersion: rbac.authorization.k8s.io/v1 
+kind: ClusterRole
+metadata:
+  name: expense 
+rules:
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["nodes", "persistentvolumes", "namespaces"]
+  verbs: ["get", "list", "watch"]
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: expense 
+subjects:
+- kind: User
+  name: Ramesh 
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: ClusterRole
+  name: expense 
+  apiGroup: rbac.authorization.k8s.io
